Bug 923614 - Remove assert, improve OOM handling in PropertyReadNeedsTypeBarrier. r=jandem, a=bkerensa