js/src/jit/MIR.cpp
@@ -2958,10 +2958,10 @@ jit::PropertyReadNeedsTypeBarrier(JSContext *propertycx,
                 if (property.maybeTypes()) {
                     types::TypeSet::TypeList types;
                     if (!property.maybeTypes()->enumerateTypes(&types))
-                        return false;
+                        break;
                     if (types.length()) {
-                        if (!observed->addType(types[0], GetIonContext()->temp->lifoAlloc()))
-                            return false;
+                        // Note: the return value here is ignored.
+                        observed->addType(types[0], GetIonContext()->temp->lifoAlloc());
                         break;
                     }
                 }
